--- a/VC.AG.WebAPI/VC.AG.Models/VC.AG.Models.csproj
+++ b/VC.AG.WebAPI/VC.AG.Models/VC.AG.Models.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
  <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.12.0" />
+    <PackageReference Include="Handlebars.Net" Version="2.1.6" />
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1" />
