--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ msbuild.wrn
 /ETF.Habilitation.API/ETF.Habilitation.API/Properties/PublishProfiles
 /publish
 .vs/
+/VC.AG.WebAPI/VC.AG.WebAPI/Properties/PublishProfiles
