--- a/VC.AG.WebAPI/VC.AG.ConsoleApp/VC.AG.ConsoleApp.csproj
+++ b/VC.AG.WebAPI/VC.AG.ConsoleApp/VC.AG.ConsoleApp.csproj
@@ -8,4 +8,10 @@
 	<UserSecretsId>b164e22c-af5a-45f2-99c7-ef156126118b</UserSecretsId>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\VC.AG.DAO\VC.AG.DAO.csproj" />
+    <ProjectReference Include="..\VC.AG.Models\VC.AG.Models.csproj" />
+    <ProjectReference Include="..\VC.AG.ServiceLayer\VC.AG.ServiceLayer.csproj" />
+  </ItemGroup>
+
 </Project>
